--- a/tests/geometry/CMakeLists.txt
+++ b/tests/geometry/CMakeLists.txt
@@ -2,9 +2,9 @@ add_um2_test(./point.cpp)
 add_um2_test(./morton_sort_points.cpp)
 add_um2_test(./ray.cpp)
 add_um2_test(./axis_aligned_box.cpp)
-add_um2_test(./line_segment.cpp)
-add_um2_test(./quadratic_segment.cpp)
-add_um2_test(./triangle.cpp)
-add_um2_test(./quadrilateral.cpp)
-add_um2_test(./quadratic_triangle.cpp)
-add_um2_test(./quadratic_quadrilateral.cpp)
+#add_um2_test(./line_segment.cpp)
+#add_um2_test(./quadratic_segment.cpp)
+#add_um2_test(./triangle.cpp)
+#add_um2_test(./quadrilateral.cpp)
+#add_um2_test(./quadratic_triangle.cpp)
+#add_um2_test(./quadratic_quadrilateral.cpp)
