--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,10 +2,10 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
 add_subdirectory(./stdlib)
 add_subdirectory(./common)
-#add_subdirectory(./math)
-#add_subdirectory(./geometry)
-#add_subdirectory(./physics)
-#add_subdirectory(./mesh)
+add_subdirectory(./math)
+add_subdirectory(./geometry)
+add_subdirectory(./physics)
+add_subdirectory(./mesh)
 #add_subdirectory(./mpact)
 #add_subdirectory(./gmsh)
 #add_subdirectory(./api)
