WIP: binned FVM

--- a/tests/mesh/CMakeLists.txt
+++ b/tests/mesh/CMakeLists.txt
@@ -10,3 +10,4 @@ add_um2_test(./face_vertex_mesh/tri_mesh.cpp)
 add_um2_test(./face_vertex_mesh/quad_mesh.cpp)
 add_um2_test(./face_vertex_mesh/quadratic_tri_mesh.cpp)
 add_um2_test(./face_vertex_mesh/quadratic_quad_mesh.cpp)
+add_um2_test(./binned_face_vertex_mesh/binned_tri_mesh.cpp)
