--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(./geometry)
 add_subdirectory(./physics)
 add_subdirectory(./mesh)
 add_subdirectory(./mpact)
-#add_subdirectory(./gmsh)
+add_subdirectory(./gmsh)
 #add_subdirectory(./api)
 ###==============================================================================
 ### gmsh
