--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -9,8 +9,9 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_tutorial.cmake)
 #add_um2_tutorial(./2d/2a_nogap_model.cpp)
 #add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
 #add_um2_tutorial(./2d/2a.cpp)
-add_um2_tutorial(./2d/c5g7_2d.cpp)
-add_um2_tutorial(./2d/c5g7_2d_smoc.cpp)
+add_um2_tutorial(./2d/c5g7_2d_pin.cpp)
+#add_um2_tutorial(./2d/c5g7_2d.cpp)
+#add_um2_tutorial(./2d/c5g7_2d_smoc.cpp)
 #add_um2_tutorial(./2d/crocus_2d.cpp)
 #
 ##==============================================================================
