--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,9 +5,9 @@ add_subdirectory(./common)
 add_subdirectory(./math)
 add_subdirectory(./geometry)
 add_subdirectory(./physics)
-add_subdirectory(./mesh)
-add_subdirectory(./mpact)
-add_subdirectory(./gmsh)
+#add_subdirectory(./mesh)
+#add_subdirectory(./mpact)
+#add_subdirectory(./gmsh)
 #add_subdirectory(./api)
 ###==============================================================================
 ### gmsh
