--- a/tests/physics/CMakeLists.txt
+++ b/tests/physics/CMakeLists.txt
@@ -1,13 +1,3 @@
-if (XSLIB_PATH MATCHES ".*/mpact8g_70s_v4.0m0_02232015.fmt")
-  file(COPY ${XSLIB_PATH} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-  set(HAVE_MPACT8G TRUE)
-else()
-  message(WARNING "XSLIB_PATH is not set to the MPACT 8 group library. Skipping cross section library test.")
-  set(HAVE_MPACT8G FALSE)
-endif()
-
 add_um2_test(./cross_section.cpp)
 add_um2_test(./nuclide.cpp)
-if (HAVE_MPACT8G)
-  #  add_um2_test(./cross_section_library.cpp)
-endif()
+add_um2_test(./cross_section_library.cpp)
